--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -6,6 +6,13 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <input type="number" id="num1" placeholder="Enter first number">
+    <input type="number" id="num2" placeholder="Enter second number">
+    <button id="add">Add</button>  
+    <button id="subtract">Subtract</button>
+    <button id="multiply">Multiply</button>
+    <button id="divide">Divide</button>
+    <div id="result"></div>
+<script src="script.js"></script>
 </body>
 </html>
