Day - 19  5/9/25 - Spotify Start day - 4

--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -33,8 +33,7 @@
                 </div>
 
                 <div class="songList">
-
-                    <ul>
+                    <ul id="songs">
 
                     </ul>
                 </div>
