--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -89,7 +89,7 @@
                         <h2>Diljit Dosanjh</h2>
                         <p>Diljit Dosanjh hits</p>
                     </div>
-                     <div data-folder="Karan" class="card">
+                     <div data-folder="karan aujla" class="card">
                         <div class="play">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -100,6 +100,18 @@
                         <img src="songs/karan aujla/cover.jpg" alt="">
                         <h2>Karan Aujla</h2>
                         <p>Karan Aujla for you</p>
+                    </div>
+                    <div data-folder="Album1" class="card">
+                        <div class="play">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" fill="#000" stroke-width="1.5"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                        <img src="songs/Diljit/cover.jpg" alt="">
+                        <h2>Album1</h2>
+                        <p>Album1</p>
                     </div>
                 </div>
                 <div class="playbar">
