--- a/TempExpress/public/mypage.html
+++ b/TempExpress/public/mypage.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         async function testPost(){
-            let a= await fetch("/", {method:"POST"});
+            let a= await fetch("/", {method:"PUT"});
             let b = await a.text();
             console.log(b);
         }
